# future-quest

admin/: index.html  package-lock.json  package.json
server/: blog.db  database.py  main.py  pyproject.toml
server/app/: main.py
server/app/api/routes/: opportunity_routes.py
server/app/core/: config.py
server/app/repositories/: opportunity_repository.py
server/app/services/: opportunity_service.py
server/app/utils/: upload.py
server/src/: __init__.py
server/src/application/use_cases/: __init__.py
server/src/application/use_cases/user/: create_user.py  dto.py  login_user.py
server/src/domain/: __init__.py  exceptions.py
server/src/domain/entities/: __init__.py  user.py
server/src/domain/repositories/: user_repository.py
server/src/infrastructure/: __init__.py  database.py
server/src/infrastructure/persistence/: __init__.py
server/src/infrastructure/persistence/models/: __init__.py  user.py
server/src/infrastructure/persistence/repositories/: __init__.py  user_repository.py
server/src/presentation/: __init__.py
server/src/presentation/api/: dependencies.py  exception_handlers.py
server/src/presentation/api/routes/: __init__.py  user.py
server/src/presentation/schemas/: __init__.py  user.py
server/tests/: README.md  conftest.py
server/tests/application/: __init__.py  test_create_user_use_case.py  test_login_use_case.py
server/tests/domain/: __init__.py  test_entities_user.py  test_exceptions.py
server/tests/infrastructure/: __init__.py  test_user_repository.py
server/tests/presentation/: __init__.py  test_user_routes.py
(+53 files in other folders)
